--- a/mscore/pianoroll/pianolevelschooser.ui
+++ b/mscore/pianoroll/pianolevelschooser.ui
@@ -31,27 +31,17 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0" colspan="2">
-       <widget class="QSpinBox" name="eventRandSpinBox">
-        <property name="toolTip">
-         <string>Random: an integer from 0 to this number will be added into the value</string>
-        </property>
-        <property name="maximum">
-         <number>999</number>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
+      <item row="1" column="1">
        <widget class="QPushButton" name="setEventsBn">
         <property name="toolTip">
          <string>Set selected note event data</string>
         </property>
         <property name="text">
-         <string>Set</string>
+         <string>Set…</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="1" column="0">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -64,26 +54,10 @@
         </property>
        </spacer>
       </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QSpinBox" name="eventSeedSpinBox">
-        <property name="toolTip">
-         <string>Seed for pseudo random number generation.</string>
-        </property>
-        <property name="maximum">
-         <number>10000</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QSpinBox" name="eventValSpinBox">
-        <property name="toolTip">
-         <string>Value</string>
-        </property>
-        <property name="minimum">
-         <number>-100000</number>
-        </property>
-        <property name="maximum">
-         <number>100000</number>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="resetEventsBn">
+        <property name="text">
+         <string>Reset</string>
         </property>
        </widget>
       </item>
